[tool.poetry]
name = "ml-experiment-runner"
version = "0.1.0"
description = ""
authors = ["Zac Burns <zacbburns@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
graphviz = "^0.20.3"
argparse = "^1.4.0"
jupyterlab = "^4.2.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
mypy = "^1.10.1"
pylint = "^3.2.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
faker = "^26.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
